Used MODAL_TYPE_WINDOW instead of _CHILD for app install dialogs.

Using MODAL_TYPE_CHILD allows interaction with the current tab and creation of
new tabs over which the dialog continues to be shown, which is not desired.
Even though MODAL_TYPE_WINDOW is more restrictive than necessary, it prevents
these undesireable behaviours.

Bug: 788656
Change-Id: Ib4fcb4c5597e831fad027364b278f1f28be89dae